<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SDPSalaryCompActivity">

    <LinearLayout
        android:id="@+id/scanWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="Base Salary:"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:id="@+id/baseSalary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:inputType="numberSigned"/>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:text="Current City:"
            android:layout_marginBottom="15dp"/>

        <Spinner
            android:id="@+id/currentCity"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dip"
            android:text="New City:"
            android:layout_marginBottom="15dp"/>

        <Spinner
            android:id="@+id/newCity"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="80dip"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dip"
            android:text="Target Salary:"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center" />

        <EditText
            android:id="@+id/targetSalary"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@null"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>